# ok-gh-securescan-action

./: Cargo.toml  LICENSE  README.md  action.yml  new_repos.json
.github/workflows/: release.yml
src/: main.rs
