[package]
name = "ok-gh-securescan-action"
description = "GitHub Action for Secure Scan check"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
governor = "0.4"
quanta = "0.9"
nonzero_ext = "0.3"
tokio = { version = "1.35.1", features = ["full"] }
ratelimit = "0.9.0"
reqwest = { version = "0.11.23", features = ["json"] }
